Did not compile on JDK 1.4
svn path=/trunk/eXist-1.0/; revision=1522


Former-commit-id: 9cf26272254e142239bab2cdbeb3069b97b177b9